--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit
-        backupGlobals="false"
-        backupStaticAttributes="false"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
         colors="true"
-        convertErrorsToExceptions="true"
-        convertNoticesToExceptions="true"
-        convertWarningsToExceptions="true"
-        processIsolation="false"
-        stopOnFailure="false"
-        syntaxCheck="false"
-        bootstrap="autoload.php"
+        bootstrap="../../vendor/autoload.php"
 >
     <testsuites>
         <testsuite name="unit">
@@ -25,15 +18,22 @@
     </testsuites>
 
     <php>
+        <server name="APP_ENV" value="test" force="true"/>
         <server name="KERNEL_DIR" value="../../app"/>
+        <server name="KERNEL_CLASS" value="AppKernel"/>
+        <const name="MAUTIC_ENV" value="test"/>
+        <server name="DB_PASSWORD" value="123456"/>
+        <const name="DB_PASSWORD" value="123456"/>
+        <env name="DB_PASSWORD" value="123456"/>
     </php>
 
-    <filter>
-        <whitelist>
-            <directory>*</directory>
-            <exclude>
-                <directory>vendor</directory>
-            </exclude>
-        </whitelist>
-    </filter>
+    <coverage processUncoveredFiles="true">
+        <include>
+            <directory suffix=".php">.</directory>
+        </include>
+        <exclude>
+            <directory>vendor</directory>
+        </exclude>
+    </coverage>
+
 </phpunit>
